# searchtool-gtk

./: .gitignore  CHANGELOG.md  Makefile  README.md  dub.json  dub.selections.json  makefile  pyproject.toml  searchtool-gtk  searchtool.json.default  searchtool.toml
.github/workflows/: lint.yaml
bin_src/: activate.c  dmenu.c
searchtool_gtk/: __init__.py  config.py  entry_point.py  exceptions.py  matching.py  mode.py
searchtool_gtk/collation/: __init__.py  base.py  cliphist.py  path.py  string.py
searchtool_gtk/gui/: __init__.py  app.py  column_view.py  content.py  entity.py  styling.py  window.py
searchtool_gtk/modes/: __init__.py  base.py  bin.py  cliphist.py  file.py  path.py  pipe.py
source/: activate.d  dmenu.d
src/client/: dmenu.c
src/searchtool_gtk/: __init__.py  config.py  entry_point.py  exceptions.py  pydantic_helpers.py
src/searchtool_gtk/client/: __init__.py  basic.py  dmenu.py
src/searchtool_gtk/collation/: __init__.py  cliphist.py  path.py  string.py
src/searchtool_gtk/gui/: __init__.py  app.py  column_view.py  content.py  entity.py  styling.py  window.py
src/searchtool_gtk/modes/: base.py  bin.py  cliphist.py  file.py  path.py  pipe.py
src/searchtool_gtk/support/: iteration.py
