[project]
name = "searchtool-gtk"
version = "2.4.0"
description = "A generic GTK search tool and launcher"
license = "Unlicense"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]

dependencies = [
  "msgspec (>=0.21)",
  "platformdirs (>=4.10.0)",
  "pygobject (>=3.54)",
  "pyicu (>=2.16)",
  "wcmatch (>=10)",
]

[project.urls]
Repository = "https://github.com/v--/searchtool-gtk.git"
Changelog = "https://github.com/v--/searchtool-gtk/blob/master/CHANGELOG.md"

[project.scripts]
searchtool-gtk-server = "searchtool_gtk:entry_point"
searchtool-gtk-dmenu = "searchtool_gtk:dmenu_client"
searchtool-gtk-activate = "searchtool_gtk:basic_client"

[dependency-groups]
dev = [
  "pygobject-stubs (>=2.16)",
  "mypy (>=2)",
  "ruff (>=0.15)",
  "ruff-config-ivasilev @ git+https://github.com/v--/ruff-config-ivasilev.git@v0.15post7",
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

# ruff
[tool.ruff]
extend = ".venv/share/ruff/ruff.ivasilev.toml"

[tool.ruff.lint]
ignore = [
  "ARG001", # unused-function-argument (GTK callbacks)
  "ARG002", # unused-method-argument (Overriden GTK methods are not recognized as overriden)
  "D1",     # undocumented-*
]

# mypy
[tool.mypy]
packages = ["searchtool_gtk"]

[[tool.mypy.overrides]]
module = [
  "icu.*",
]
ignore_missing_imports = true
